# blockcipher-structure-adaptive-nd-v1

./: .gitattributes  .gitignore  AGENTS.md  MIGRATION_MINIMAL.md  NOTES.md  README.md  RESOURCES.md  pyproject.toml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  HEALS.md  LEARNINGS.md
assets/: lesson.css  split-cancel-demo.js
configs/: README.md
docs/: 自动化目标规则.md
lessons/: 0001-split-and-cancel-data-example.html  0002-one-structure-to-matrix.html  0003-innovation2-current-method.html  MISSION.md  NOTES.md  README.md  RESOURCES.md
plugins/blockcipher-training-accelerator/: README.md  pyproject.toml
plugins/blockcipher-training-accelerator/.codex-plugin/: plugin.json
plugins/blockcipher-training-accelerator/skills/blockcipher-training-accelerator/: SKILL.md
plugins/blockcipher-training-accelerator/src/blockcipher_training_accelerator/: __init__.py  __main__.py  benchmark.py  cli.py  data.py  dataset_cache.py  launcher.py  matrix.py  profiles.py  quality_gate.py  runner.py  trainer.py
plugins/blockcipher-training-accelerator/tests/: test_benchmark.py  test_dataset_cache.py  test_launcher.py  test_matrix.py  test_profiles.py  test_quality_gate.py  test_runner.py
reference/: integral-split-cancel-cheatsheet.html
scripts/: README.md  advance-high-round  advance-integral-inverse-feature-result  advance-projection-feature-result  advance-residual-focus-results  analyze-deterministic-score-residual  analyze-reliability-residual-buckets  analyze-residual-bucket-axis-spectrum  analyze-trail-position-scores  apply-bit-sensitivity-projection  (+409 more)
sources/: README.md  (+81 more)
(+2412 files in other folders)
