[project]
name = "blockcipher-nd"
version = "0.1.0"
description = "Structure-aware neural distinguisher experiments for block ciphers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "torch>=2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
